# sample_streamlit_app

./: .gitignore  Makefile  app.py  checklist.md  docker-compose.yml  package-lock.json  package.json  project-plan.md  project-plan.xml  pyproject.toml  pytest.ini  repository-packed.md  run_backend.py  run_frontend.py  terraform-diagram.html  weather_api_plan.md  xml-conversion-plan.md
backend/: Dockerfile  main.py  requirements.txt
backend/api/: app.py
backend/tests/: test_app_initialization.py  test_health_endpoint.py
src/weather_app/: __init__.py
src/weather_app/backend/: Dockerfile  config.py  main.py  pyproject.toml
src/weather_app/backend/api/: app.py
src/weather_app/backend/config/: config_development.json  config_production.json
src/weather_app/backend/models/: weather.py
src/weather_app/backend/services/: weather_service.py
src/weather_app/backend/tests/: test_app_initialization.py  test_config.py  test_cors.py  test_current_weather_endpoint.py  test_forecast_endpoint.py  test_health_endpoint.py  test_hourly_forecast_endpoint.py  test_weather_service.py
src/weather_app/frontend/: Dockerfile  app.py  pyproject.toml  requirements.txt
src/weather_app/frontend/components/: current_weather_display.py  forecast_display.py  hourly_forecast.py  humidity_display.py  location_form.py  wind_display.py
src/weather_app/frontend/services/: api_service.py
src/weather_app/frontend/tests/: test_hourly_forecast.py  test_humidity_display.py  test_location_form.py  test_wind_display.py
terraform/: architecture.md  cloud_run.tf  dns.tf  load_balancer.tf  main.tf  network.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  tfplan  variables.tf
test_data/: weather_samples.json
tests/: test_backend_dockerfile.py  test_container_communication.py  test_container_health_checks.py  test_container_networking.py  test_data_volume.py  test_docker_compose.py  test_frontend_dockerfile.py
