[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-app-backend"
version = "0.1.0"
description = "Weather App Backend API"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.95.1",
    "uvicorn==0.22.0",
    "pydantic==1.10.8",
    "python-dotenv==1.0.0",
    "requests==2.28.2",
    "httpx==0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.3.1",
    "black==23.3.0",
    "isort==5.12.0",
]

[tool.setuptools]
packages = ["api", "models", "services", "config"] 