[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-app-frontend"
version = "0.1.0"
description = "Weather App Frontend"
requires-python = ">=3.9"
dependencies = [
    "streamlit==1.24.0",
    "requests==2.28.2",
    "python-dotenv==1.0.0",
    "pytest==7.3.1",
    "httpx==0.24.0",
    "numpy==1.24.3",
    "matplotlib==3.7.1",
    "pandas==2.0.1",
    "plotly==5.14.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.3.1",
] 

[tool.setuptools]
packages = ["services", "components", "pages"] 